# python-wasm

./: .gitignore  .pylon.toml  Makefile  README.md
bindings/: DEPRECATED.md
docs/: browser-tls.md  build-profiles.md  c-ext-wheels.md  cap-fidelity-audit.md  codec-caps-plan.md  codec-caps-wit-design.md  componentize-python.md  coverage-implementation-plan.md  distribution-channels-plan.md  extension-recipe.md  latest-python-investment-areas.md  native-execution-and-parallelism.md  older-python-support.md  phase-3-tls.md  pip-wheel-wrapper-plan.md  pyforge-pkg-native-spec.md  pyforge-pkg-spec.md  pyforge-wheel-spec.md  pylon-pyforge-implementation.md  pylon-pyforge.md  stdlib-dependency-sweep.md  tier1-v86-integration.md  tier5-transparent-proxying.md  wasi-0.2.9-uplift.md  wheel-install.md  zlib-wasm-mapping.md
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/src/python_wasm/: __init__.py  cli.py
packaging/pypi/src/python_wasm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
patches/: 0001-wasi-sdk-29-wasip2.patch
plans/: python-browser.json  python-v86.json
profiles/: 3.12-current.toml  3.13-current.toml  3.14-current.toml  3.14-debug.toml  default.toml
reference-worker/: README.md  run-wasip2-offload.sh
registry/: README.md  packages.json
scripts/: build-composectl-plan.sh  build-extension-wheel.sh  build-from-pkgs.sh  build-openssl.sh  build-pypi-wheel.sh  build-python-v86-composectl-plan.sh  build-zlib.sh  bundle-stdlib.sh  compose-python-component.sh  fetch-cpython.sh  fetch-sdk.sh  fetch-tzdata.sh  install.sh  uv-dev.sh  (+21 more)
(+144 files in other folders)
